@@ -1,4 +1,8 @@
 EXTRA_DIST = dolfin_tanganyika.h \
+             cGqElement.h \
              cGqMethod.h \
+             dGqElement.h \
              dGqMethod.h \
+             Element.h \
+             GenericElement.h \
              Method.h
