@@ -3,8 +3,12 @@
 
 // Multi-adaptivity
 
+#include <dolfin/cGqElement.h>
 #include <dolfin/cGqMethod.h>
+#include <dolfin/dGqElement.h>
 #include <dolfin/dGqMethod.h>
+#include <dolfin/Element.h>
+#include <dolfin/GenericElement.h>
 #include <dolfin/Method.h>
 
 #endif
